# microkit

./: .gitmodules  README.md  build_sdk.py  qemu_x86_64.sh  requirements.txt  vb105.sh
capdl-initialiser/: Makefile
capdl-monitor/: Makefile
capdl-monitor/src/: main.c
docs/: manual.md
example/vb_105/hello/: Makefile
example/x86_64_virt/hello/: Makefile  client.c  hello.system  server.c
libmicrokit/: Makefile
libmicrokit/include/: microkit.h
libmicrokit/src/: main.c
libsel4cp/: Makefile
libsel4cp/include/: sel4cp.h
loader/src/aarch64/: loader.c
tool/: pyoxidizer.bzl
tool/capdl/: ELF.py  Object.py
tool/microkit/: __main__.py  cdlutil.py  elf.py  loader.py  sel4.py  sysxml.py
tool/microkit-rs/: Cargo.toml  TODO  bench.sh  example_report.txt  hello.system  qemu.sh
tool/microkit-rs/src/: elf.rs  loader.rs  main.rs  sel4.rs  sysxml.rs  util.rs
tool/microkit-rs/testing/: hello.elf  loader.elf  monitor.elf  sel4.elf
tool/microkit/src/: lib.rs  main.rs  sysxml.rs
tool/microkit/tests/: test.rs
tool/sel4coreplat/: __main__.py  sel4.py  sysxml.py  util.py
tool/test/: __init__.py
