[package]
name = "microkit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
roxmltree = "=0.1.0"
serde = { version = "1.0.198", features = ["derive"] }
